New footer, minor cleanup and consistancy

--- a/queensofgoodness/bees.html
+++ b/queensofgoodness/bees.html
@@ -18,12 +18,12 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://queensofgoodness.com/index.html">
     <meta property="og:site_name" content="Queens of Goodness - Education & Events">
-    <meta property="og:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
+    <meta property="og:description" content="Premium creamed raw honey with fair-trade spices and whole freeze dried fruits">
     <meta property="og:image" content="static/img/logo.svg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Queens of Goodness - Education & Events">
-    <meta property="twitter:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
+    <meta property="twitter:description" content="Premium creamed raw honey with fair-trade spices and whole freeze dried fruits">
     <meta property="twitter:site" content="@queensofgoodness">
     <meta property="twitter:image" content="static/img/logo.svg">
     <meta name="description" content="Queens of Goodness - Education & Events">
@@ -232,37 +232,68 @@
     </div><!--/.container-->
 
     <footer>
-      <div class="container text-primary">
-        <div class="row row-cols-2 row-cols-sm-2 g-3">
-          <div class="col-8">
-            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+      <div class="container-md text-primary d-md-none footer-block">
+        <div class="row row-cols-2 g-3">
+          <div class="col-9 col-sm-9">
+            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
             <p class="text-center">Raw Local Honey</p>
-            <p class="text-center">Nutritious freeze-dried fruits</p>
-            <p class="text-center">Fair-trade & single origin spices</p>
-            <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
-              <a href="mailto:susan@queensofgoodness.com" class="social-icon bg-info"><i class="fas fa-envelope fa-lg"></i></a>
-            </div>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
           </div>
-          <div class="col-4">
+          <div class="col-3 col-sm-3">
             <ul class="list-unstyled">
               <li class="footer-item"><a href="products.html" class="footer-link"><p>Products</p></a></li>
-              <li class="footer-item"><a href="bees.html" class="footer-link"><p>Education</p></a></li>
+              <li class="footer-item"><a href="bees.html" class="footer-link-active"><p>Education</p></a></li>
               <li class="footer-item"><a href="events.html" class="footer-link"><p>Events</p></a></li>
               <li class="footer-item"><a href="shop.html" class="footer-link"><p>Shop</p></a></li>
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
             </ul>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
           </div>
-
         </div>
-
-        <!-- Copyright -->
-        <div class="row mt-5>
-          <div class="col-12">
-          <div class="text-center">
-            <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
+      </div>
+      <div class="container-lg text-primary d-none d-md-block footer-block">
+        <div class="row text-center">
+          <div class="col">
+            <a href="products.html" class="footer-link">Products</a>
           </div>
+          <div class="col">
+            <a href="bees.html" class="footer-link-active">Education</a>
+          </div>
+          <div class="col">
+            <a href="events.html" class="footer-link">Events</a>
+          </div>
+          <div class="col">
+            <a href="shop.html" class="footer-link">Shop</a>
+          </div>
+          <div class="col">
+            <a href="about.html" class="footer-link">About</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
+            <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p class="text-center"><br>Raw Local Honey</p>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Copyright -->
+      <div class="container">
+        <div class="text-center">
+          <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
         </div>
       </div>
     </footer>
