--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -132,7 +132,7 @@
       <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
           <div class="card tg-card h-100">
-            <img class="card-img-top" src="static/img/Product%20stack.jpg" alt="Product stack">
+            <img class="card-img-top" src="static/img/1.jpg" alt="Product stack">
           </div>
         </div>
         <div class="col">
@@ -140,9 +140,9 @@
             <div class="card-header text-center">Premium Creamed Raw Honey</div>
             <div class="card-body">
               <ul class="card-text">
-                <li>Unfiltered and never heated</li>
-                <li>Everything from the bee's own honey</li>
-                <li>Creamed to be silky and spreadable</li>
+                <li>Sourced directly from local beekeepers</li>
+                <li>All the natural benefits of raw local honey</li>
+                <li>Creamed to be velvety smooth and spreadable</li>
                 <li>Hand crafted in small batches</li>
               </ul>
             </div>
@@ -152,7 +152,7 @@
       <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col-sm-6 order-sm-2">
           <div class="card tg-card h-100">
-            <img class="card-img-top" src="static/img/4.jpg" alt="Product stack">
+            <img class="card-img-top" src="static/img/5.jpg" alt="Product stack">
           </div>
         </div>
         <div class="col-sm-6 order-sm-1">
@@ -161,9 +161,9 @@
             <div class="card-body">
               <ul class="card-text">
                 <li>Raw local honey</li>
-                <li>Fair trade and single origin spices</li>
-                <li>Nutritious freeze-dried whole fruits</li>
-                <li>Clean label & ethically sourced</li>
+                <li>Fair-trade and premium spices</li>
+                <li>Nutrient-rich freeze-dried fruits</li>
+                <li>Clean label and ethically sourced</li>
               </ul>
             </div>
           </div>
@@ -178,10 +178,10 @@
             <div class="card-body">
               <h5 class="card-title text-center">Golden Milk</h5>
               <ul class="card-text">
-                <li>Make a delicious Golden Milk Latte by just adding a spoonful to a hot beverage</li>
-                <li>Add spice and sweetness to your oatmeal or hot cereal</li>
-                <li>Spread it on toast, grahams or waffles</li>
-                <li>Use it in glazes and stir-fry</li>
+                <li>Easily craft a delicious golden milk latte - just stir a spoonful into your favorite hot beverage</li>
+                <li>Enhance your oatmeal with spice and sweetness</li>
+                <li>Spread on toast, grahams or waffles</li>
+                <li>Enjoy a spoonful or make a tonic</li>
               </ul>
               <p><b>INGREDIENTS:</b> raw honey, turmeric, ginger, cinnamon, pepper</p>
             </div>
@@ -192,46 +192,14 @@
             <div class="card-header text-center">Elderberry</div>
             <img class="card-img-top" src="static/img/2.jpg" alt="Elderberry">
             <div class="card-body">
-              <h5 class="card-title text-center">Elderberry Tea</h5>
+              <h5 class="card-title text-center">Elderberry Boost</h5>
               <ul class="card-text">
-                <li>Stir a spoonful into your favorite hot beverage</li>
-                <li>Add a berry boost to your hot drink, oatmeal or hot cereal</li>
-                <li>Spread it on toast, pancakes or waffles</li>
-                <li>Make a soothing tonic</li>
+                <li>Add a berry boost to your oatmeal or hot cereal - just stir in a spoonful</li>
+                <li>Create a soothing tonic or refreshing beverage</li>
+                <li>Spread on biscuits or bagels</li>
+                <li>Enjoy a spoonful or make a soothing tonic</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic elderberry</p>
-            </div>
-          </div>
-        </div>
-        <div class="col" id="G">
-          <div class="card g-card h-100">
-            <div class="card-header text-center">Ginger</div>
-            <img class="card-img-top" src="static/img/4.jpg" alt="Ginger">
-            <div class="card-body">
-              <h5 class="card-title text-center">Ginger Tea</h5>
-              <ul class="card-text">
-                <li>Stir a spoonful into your favorite tea or hot water</li>
-                <li>Spread on biscuits, bagels or waffles</li>
-                <li>Make a simple syrup or salad dressing</li>
-                <li>Use it in glazes, pair with cheese</li>
-              </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic lemon</p>
-            </div>
-          </div>
-        </div>
-        <div class="col" id="PS">
-          <div class="card ps-card h-100">
-            <div class="card-header text-center">Pumpkin Spice</div>
-            <img class="card-img-top" src="static/img/Toast.jpeg" alt="Pumpkin Spice">
-            <div class="card-body">
-              <h5 class="card-title text-center">Pumpkin Spice Chai</h5>
-              <ul class="card-text">
-                <li>Use a little to make your favorite hot chai</li>
-                <li>Add spice and sweetness to your oatmeal or hot cereal</li>
-                <li>Spread on biscuits, bagels or waffles</li>
-                <li>Use as icing, pair with apples or cheese</li>
-              </ul>
-              <p><b>INGREDIENTS:</b> raw honey, cinnamon, turmeric, ginger, nutmeg, allspice, clove, pepper</p>
+              <p><b>INGREDIENTS:</b> raw honey, organic elderberries</p>
             </div>
           </div>
         </div>
@@ -240,14 +208,14 @@
             <div class="card-header text-center">Blueberry Lemon</div>
             <img class="card-img-top" src="static/img/BlueberryTea.jpeg" alt="Blueberry Lemon">
             <div class="card-body">
-              <h5 class="card-title text-center">Blueberry Apples</h5>
+              <h5 class="card-title text-center">Charcuterie</h5>
               <ul class="card-text">
-                <li>Try it with apples or cheese</li>
+                <li>Pair it with apples or cheese</li>
                 <li>Spread on biscuits, bagels or waffles</li>
-                <li>Add a berry boost to your hot drink, oatmeal or hot cereal</li>
-                <li>Use it in glazes, or as icing</li>
+                <li>Add a berry boost to your hot drink or oatmeal</li>
+                <li>Enjoy a spoonful or as delicious icing on a treat</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic blueberries, organic lemon</p>
+              <p><b>INGREDIENTS:</b> raw honey, organic blueberries, organic lemons</p>
             </div>
           </div>
         </div>
@@ -256,14 +224,46 @@
             <div class="card-header text-center">Lemon</div>
             <img class="card-img-top" src="static/img/3.jpg" alt="Lemon">
             <div class="card-body">
-              <h5 class="card-title text-center">Lemon Tea</h5>
+              <h5 class="card-title text-center">Lemon Tonic</h5>
               <ul class="card-text">
-                <li>Stir a spoonful into your favorite tea or hot water</li>
-                <li>Spread on biscuits, bagels or waffles</li>
-                <li>Make a simple syrup or salad dressing</li>
-                <li>Use it in glazes, pair with cheese</li>
+                <li>Create a morning tonic - just stir a spoonful into your favorite herbal tea or hot water</li>
+                <li>Spread on biscuits, bagels or toast</li>
+                <li>Add a little zing to glazes or salad dressing</li>
+                <li>Enjoy a spoonful or as delicious icing on a treat</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic lemon</p>
+              <p><b>INGREDIENTS:</b> raw honey, organic lemons</p>
+            </div>
+          </div>
+        </div>
+        <div class="col" id="G">
+          <div class="card g-card h-100">
+            <div class="card-header text-center">Ginger</div>
+            <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Ginger_Tea_.jpg" alt="Ginger">
+            <div class="card-body">
+              <h5 class="card-title text-center">Ginger Tea</h5>
+              <ul class="card-text">
+                <li>Create a ginger tonic - just stir a spoonful into your favorite herbal tea or hot water</li>
+                <li>Spread on biscuits, bagels or pair with strong cheese</li>
+                <li>Create flavorful glazes, add to stir-fries or drizzle over roasted vegetables</li>
+                <li>Enjoy a spoonful or add a sweet and spicy kick to your table</li>
+              </ul>
+              <p><b>INGREDIENTS:</b> raw honey, ginger</p>
+            </div>
+          </div>
+        </div>
+        <div class="col" id="PS">
+          <div class="card ps-card h-100">
+            <div class="card-header text-center">Pumpkin Spice</div>
+            <img class="card-img-top" src="static/img/Toast.jpeg" alt="Pumpkin Spice">
+            <div class="card-body">
+              <h5 class="card-title text-center">Pumpkin Spice Waffle</h5>
+              <ul class="card-text">
+                <li>Create a festive hot chai - just stir a spoonful into your favorite hot beverage</li>
+                <li>Spread on bagels, pancakes or waffles</li>
+                <li>Enhance your oatmeal with spice and sweetness</li>
+                <li>Use as a delicious icing or pair with cheese</li>
+              </ul>
+              <p><b>INGREDIENTS:</b> raw honey, cinnamon, turmeric, ginger, nutmeg, allspice, clove, pepper</p>
             </div>
           </div>
         </div>
@@ -271,37 +271,68 @@
     </div><!--/.container-->
 
     <footer>
-      <div class="container text-primary">
-        <div class="row row-cols-2 row-cols-sm-2 g-3">
-          <div class="col-8">
-            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+      <div class="container-md text-primary d-md-none footer-block">
+        <div class="row row-cols-2 g-3">
+          <div class="col-9 col-sm-9">
+            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
             <p class="text-center">Raw Local Honey</p>
-            <p class="text-center">Nutritious freeze-dried fruits</p>
-            <p class="text-center">Fair-trade & single origin spices</p>
-            <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
-              <a href="mailto:susan@queensofgoodness.com" class="social-icon bg-info"><i class="fas fa-envelope fa-lg"></i></a>
-            </div>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
           </div>
-          <div class="col-4">
+          <div class="col-3 col-sm-3">
             <ul class="list-unstyled">
-              <li class="footer-item"><a href="products.html" class="footer-link"><p>Products</p></a></li>
+              <li class="footer-item"><a href="products.html" class="footer-link-active"><p>Products</p></a></li>
               <li class="footer-item"><a href="bees.html" class="footer-link"><p>Education</p></a></li>
               <li class="footer-item"><a href="events.html" class="footer-link"><p>Events</p></a></li>
               <li class="footer-item"><a href="shop.html" class="footer-link"><p>Shop</p></a></li>
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
             </ul>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
           </div>
-
         </div>
-
-        <!-- Copyright -->
-        <div class="row mt-5>
-          <div class="col-12">
-          <div class="text-center">
-            <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
+      </div>
+      <div class="container-lg text-primary d-none d-md-block footer-block">
+        <div class="row text-center">
+          <div class="col">
+            <a href="products.html" class="footer-link-active">Products</a>
           </div>
+          <div class="col">
+            <a href="bees.html" class="footer-link">Education</a>
+          </div>
+          <div class="col">
+            <a href="events.html" class="footer-link">Events</a>
+          </div>
+          <div class="col">
+            <a href="shop.html" class="footer-link">Shop</a>
+          </div>
+          <div class="col">
+            <a href="about.html" class="footer-link">About</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
+            <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p class="text-center"><br>Raw Local Honey</p>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Copyright -->
+      <div class="container">
+        <div class="text-center">
+          <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
         </div>
       </div>
     </footer>
