--- a/queensofgoodness/beekeeping.html
+++ b/queensofgoodness/beekeeping.html
@@ -228,7 +228,7 @@
                 <li>Female mites can have up to 3 reproductive cycles</li>
                 <li>Varroa mites are much more likely to lay eggs on drone brood</li>
                 <li>Drone cells are capped a day later than workers and emerge 3 days later</li>
-                <li>500 mites (1% tested rate) becomes 1,500 mites after 15-18 days, then 4,500, 13,500, 40,500 ...
+                <li>500 mites (1% tested rate) becomes 1,500 mites after 15-18 days, then 4,500, 13,500, 40,500 ...</li>
                 <li>In late summer the Varroa population continues to grow while the bee population declines</li>
               </ul>
             </div>
@@ -421,20 +421,15 @@
     </div><!--/.container-->
 
     <footer>
-      <div class="container text-primary">
-        <div class="row row-cols-2 row-cols-sm-2 g-3">
-          <div class="col-8">
-            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+      <div class="container-md text-primary d-md-none footer-block">
+        <div class="row row-cols-2 g-3">
+          <div class="col-9 col-sm-9">
+            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
             <p class="text-center">Raw Local Honey</p>
-            <p class="text-center">Nutritious freeze-dried fruits</p>
-            <p class="text-center">Fair-trade & single origin spices</p>
-            <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
-              <a href="mailto:susan@queensofgoodness.com" class="social-icon bg-info"><i class="fas fa-envelope fa-lg"></i></a>
-            </div>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
           </div>
-          <div class="col-4">
+          <div class="col-3 col-sm-3">
             <ul class="list-unstyled">
               <li class="footer-item"><a href="products.html" class="footer-link"><p>Products</p></a></li>
               <li class="footer-item"><a href="bees.html" class="footer-link"><p>Education</p></a></li>
@@ -442,24 +437,58 @@
               <li class="footer-item"><a href="shop.html" class="footer-link"><p>Shop</p></a></li>
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
             </ul>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
           </div>
-
         </div>
-
-        <!-- Copyright -->
-        <div class="row mt-5>
-          <div class="col-12">
-          <div class="text-center">
-            <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
+      </div>
+      <div class="container-lg text-primary d-none d-md-block footer-block">
+        <div class="row text-center">
+          <div class="col">
+            <a href="products.html" class="footer-link">Products</a>
           </div>
+          <div class="col">
+            <a href="bees.html" class="footer-link">Education</a>
+          </div>
+          <div class="col">
+            <a href="events.html" class="footer-link">Events</a>
+          </div>
+          <div class="col">
+            <a href="shop.html" class="footer-link">Shop</a>
+          </div>
+          <div class="col">
+            <a href="about.html" class="footer-link">About</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
+            <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p class="text-center"><br>Raw Local Honey</p>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Copyright -->
+      <div class="container">
+        <div class="text-center">
+          <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
         </div>
       </div>
     </footer>
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
     <script src="https://use.fontawesome.com/3142141c42.js"></script>
     <script src="static/js/main.js" type="text/javascript"></script>
   </body>
