--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -18,15 +18,15 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://queensofgoodness.com/index.html">
     <meta property="og:site_name" content="Queens of Goodness">
-    <meta property="og:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
+    <meta property="og:description" content="Premium creamed raw honey with fair trade-spices and whole freeze dried fruits">
     <meta property="og:image" content="static/img/logo.svg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Queens of Goodness">
-    <meta property="twitter:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
+    <meta property="twitter:description" content="Premium creamed raw honey with fair-trade spices and whole freeze dried fruits">
     <meta property="twitter:site" content="@queensofgoodness">
     <meta property="twitter:image" content="static/img/logo.svg">
-    <meta name="description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
+    <meta name="description" content="Premium creamed raw honey with fair-trade spices and whole freeze dried fruits">
     <meta name="author" content="Susan Frost">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -136,11 +136,11 @@
             <div class="card-body">
               <p class="card-text">
                 Our premium creamed raw honey is crafted from raw honey sourced directly
-                from trusted local beekeepers and enriched with pure, fair-trade,
-                single-origin spices and nutrient-rich freeze-dried fruits. Each small
-                batch is hand-crafted using a proprietary week-long crystallization and
-                blending process that yields a velvety smooth, spreadable product with
-                distinctive flavors and all the natural benefits of raw local honey.
+                from trusted local beekeepers and enriched with fair-trade spices and
+                nutrient-rich freeze-dried fruits. Each batch is hand-crafted using a
+                proprietary week-long crystallization and blending process that yields
+                a velvety smooth, spreadable product with distinctive flavors and all
+                the natural benefits of raw local honey.
               </p>
             </div>
           </div>
@@ -157,9 +157,6 @@
         </div>
       </div>
 
-      <div class="row">
-        <h2 class="bolder text-center">Raw Local Honey</h2>
-      </div>
       <div class="row g-3">
         <div class="image-container">
           <img src="static/img/Colorful%20hives.jpg" class="img-fluid img-banner">
@@ -170,26 +167,26 @@
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center">Hand-crafted to Nourish Body & Spirit</h2>
+        <h2 class="bolder text-center">Crafted to taste good and do good by supporting local beekeepers, farmers and you</h2>
       </div>
       <div class="row row-cols-2 g-3">
         <div class="col">
           <img src="static/img/Toast.jpeg" class="img-fluid img-center">
         </div>
         <div class="col">
-          <img src="static/img/BlueberryTea.jpeg" class="img-fluid img-center">
+          <img src="static/img/BlueberryTea.jpeg" class="img-fluid img-center h-100">
         </div>
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center">Premium Ingredients<br>
-          -- fair-trade & single origin spices --<br>
-          -- nutritious freeze-dried whole fruits --</h2>
+        <h2 class="bolder text-center">Pure Wholesome Ingredients<br>
+          <i>Fair-trade spices<br>
+            Nutrient-rich freeze-dried fruits</i></h2>
       </div>
 
       <div class="row row-cols-2 g-3">
         <div class="col">
-          <img src="static/img/Golden%20milk%20with%20spices.jpg" class="img-fluid img-center">
+          <img src="static/img/Golden%20milk%20with%20spices.jpg" class="img-fluid img-center h-100">
         </div>
         <div class="col">
           <img src="static/img/5.jpg" class="img-fluid img-center">
@@ -211,7 +208,7 @@
           <img src="static/img/6.jpg" class="img-fluid img-center">
         </div>
         <div class="col">
-          <img src="static/img/8.jpg" class="img-fluid img-center">
+          <img src="static/img/SiloFlowers.jpg" class="img-fluid img-center">
         </div>
       </div>
 
@@ -220,7 +217,7 @@
       </div>
 
 
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+      <div class="row row-cols-2 row-cols-md-3 row-cols-xl-6 g-3">
         <div class="col img-hover">
           <div class="card tg-card img-hover">
             <a href="products.html#TG" class="text-decoration-none">
@@ -271,7 +268,7 @@
         </div>
       </div>
 
-      <div class="row row-cols-1 rows-cols-md-2 g-3">
+      <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
           <div class="card h-100">
             <div class="card-header text-center">Education & Events</div>
@@ -302,20 +299,15 @@
     </div><!--/.container-->
 
     <footer>
-      <div class="container text-primary">
-        <div class="row row-cols-2 row-cols-sm-2 g-3">
-          <div class="col-8">
-            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+      <div class="container-md text-primary d-md-none footer-block">
+        <div class="row row-cols-2 g-3">
+          <div class="col-9 col-sm-9">
+            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
             <p class="text-center">Raw Local Honey</p>
-            <p class="text-center">Nutritious freeze-dried fruits</p>
-            <p class="text-center">Fair-trade & single origin spices</p>
-            <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
-              <a href="mailto:susan@queensofgoodness.com" class="social-icon bg-info"><i class="fas fa-envelope fa-lg"></i></a>
-            </div>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
           </div>
-          <div class="col-4">
+          <div class="col-3 col-sm-3">
             <ul class="list-unstyled">
               <li class="footer-item"><a href="products.html" class="footer-link"><p>Products</p></a></li>
               <li class="footer-item"><a href="bees.html" class="footer-link"><p>Education</p></a></li>
@@ -323,24 +315,58 @@
               <li class="footer-item"><a href="shop.html" class="footer-link"><p>Shop</p></a></li>
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
             </ul>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
           </div>
-
         </div>
-
-        <!-- Copyright -->
-        <div class="row mt-5>
-          <div class="col-12">
-          <div class="text-center">
-            <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
+      </div>
+      <div class="container-lg text-primary d-none d-md-block footer-block">
+        <div class="row text-center">
+          <div class="col">
+            <a href="products.html" class="footer-link">Products</a>
           </div>
+          <div class="col">
+            <a href="bees.html" class="footer-link">Education</a>
+          </div>
+          <div class="col">
+            <a href="events.html" class="footer-link">Events</a>
+          </div>
+          <div class="col">
+            <a href="shop.html" class="footer-link">Shop</a>
+          </div>
+          <div class="col">
+            <a href="about.html" class="footer-link">About</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
+            <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p class="text-center"><br>Raw Local Honey</p>
+            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
+            <p class="text-center">Fair-trade and premium spices</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Copyright -->
+      <div class="container">
+        <div class="text-center">
+          <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
         </div>
       </div>
     </footer>
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
     <script src="https://use.fontawesome.com/3142141c42.js"></script>
     <script src="static/js/main.js" type="text/javascript"></script>
   </body>
