Improve footer on phone

--- a/queensofgoodness/bees.html
+++ b/queensofgoodness/bees.html
@@ -234,13 +234,13 @@
     <footer>
       <div class="container-md text-primary d-md-none footer-block">
         <div class="row row-cols-2 g-3">
-          <div class="col-9 col-sm-9">
+          <div class="col-8">
             <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
             <p class="text-center">Raw Local Honey</p>
             <p class="text-center">Nutrient-rich freeze-dried fruits</p>
             <p class="text-center">Fair-trade and premium spices</p>
           </div>
-          <div class="col-3 col-sm-3">
+          <div class="col-4">
             <ul class="list-unstyled">
               <li class="footer-item"><a href="products.html" class="footer-link"><p>Products</p></a></li>
               <li class="footer-item"><a href="bees.html" class="footer-link-active"><p>Education</p></a></li>
@@ -292,8 +292,8 @@
 
       <!-- Copyright -->
       <div class="container">
-        <div class="text-center">
-          <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
+        <div class="copyright">
+          <p class="text-center">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
         </div>
       </div>
     </footer>
