--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -140,10 +140,10 @@
             <div class="card-header text-center">Premium Creamed Raw Honey</div>
             <div class="card-body">
               <ul class="card-text">
+                <li>Raw local honey</li>
                 <li>Sourced directly from local beekeepers</li>
                 <li>All the natural benefits of raw local honey</li>
-                <li>Creamed to be velvety smooth and spreadable</li>
-                <li>Hand crafted in small batches</li>
+                <li>Creamed to be velvety-smooth and spreadable</li>
               </ul>
             </div>
           </div>
@@ -160,7 +160,7 @@
             <div class="card-header text-center">Indulge in Nature's Finest Blends</div>
             <div class="card-body">
               <ul class="card-text">
-                <li>Raw local honey</li>
+                <li>Hand-crafted in small batches</li>
                 <li>Fair-trade and premium spices</li>
                 <li>Nutrient-rich freeze-dried fruits</li>
                 <li>Clean label and ethically sourced</li>
@@ -273,13 +273,13 @@
     <footer>
       <div class="container-md text-primary d-md-none footer-block">
         <div class="row row-cols-2 g-3">
-          <div class="col-9 col-sm-9">
+          <div class="col-8">
             <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
             <p class="text-center">Raw Local Honey</p>
             <p class="text-center">Nutrient-rich freeze-dried fruits</p>
             <p class="text-center">Fair-trade and premium spices</p>
           </div>
-          <div class="col-3 col-sm-3">
+          <div class="col-4">
             <ul class="list-unstyled">
               <li class="footer-item"><a href="products.html" class="footer-link-active"><p>Products</p></a></li>
               <li class="footer-item"><a href="bees.html" class="footer-link"><p>Education</p></a></li>
@@ -331,8 +331,8 @@
 
       <!-- Copyright -->
       <div class="container">
-        <div class="text-center">
-          <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
+        <div class="copyright">
+          <p class="text-center">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
         </div>
       </div>
     </footer>
