--- a/queensofgoodness/beekeeping.html
+++ b/queensofgoodness/beekeeping.html
@@ -302,12 +302,13 @@
                   <li>Entombment of infected drone brood</li>
                   <li>Mite infertility in worker brood</li>
                 </ul>
+                <li>Breaks in brood cycle: Split colonies or cage queen temporarily to interrupt Varroa reproduction</li>
                 <li>Drone Comb, Screened Bottom Boards</li>
                 <ul>
                   <li>Add drone comb frames, remove them regulary and freeze</li>
                   <li>Screened bottom boards make it more likely that fallen mites can't reenter hive</li>
                   <ul>
-                    <li>Not proven to work, but good for seeing results of a treatment</li>
+                    <li>Not proven to work, but with white bottom board it's good for seeing results of a treatment</li>
                   </ul>
                 </ul>
                 <div class="card-footer text-center">
@@ -423,13 +424,13 @@
     <footer>
       <div class="container-md text-primary d-md-none footer-block">
         <div class="row row-cols-2 g-3">
-          <div class="col-9 col-sm-9">
+          <div class="col-8">
             <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
             <p class="text-center">Raw Local Honey</p>
             <p class="text-center">Nutrient-rich freeze-dried fruits</p>
             <p class="text-center">Fair-trade and premium spices</p>
           </div>
-          <div class="col-3 col-sm-3">
+          <div class="col-4">
             <ul class="list-unstyled">
               <li class="footer-item"><a href="products.html" class="footer-link"><p>Products</p></a></li>
               <li class="footer-item"><a href="bees.html" class="footer-link"><p>Education</p></a></li>
@@ -481,8 +482,8 @@
 
       <!-- Copyright -->
       <div class="container">
-        <div class="text-center">
-          <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
+        <div class="copyright">
+          <p class="text-center">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
         </div>
       </div>
     </footer>
