Small card header

--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -140,10 +140,9 @@
             <div class="card-header text-center">Premium Creamed Raw Honey</div>
             <div class="card-body">
               <ul class="card-text">
-                <li>Raw local honey</li>
+                <li>Raw unfiltered honey with all the goodness from the bees</li>
                 <li>Sourced directly from local beekeepers</li>
-                <li>All the natural benefits of raw local honey</li>
-                <li>Creamed to be velvety-smooth and spreadable</li>
+                <li>Creamed to a rich, velvety-smooth and spreadable consistency</li>
               </ul>
             </div>
           </div>
