Successful beekeeping class

--- a/queensofgoodness/events.html
+++ b/queensofgoodness/events.html
@@ -133,17 +133,6 @@
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
           <div class="card h-100">
-            <div class="card-body">
-              <img class="img-fluid" src="static/img/IntroMarch2025.jpeg" alt="Introduction to Bees and Beekeeping">
-            </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="https://www.eventbrite.com/o/central-wyoming-college-lander-17509004051" target="_blank" rel="noopener noreferrer">
-                Register</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
             <div class="card-header text-center">Garden Expo 2025</div>
             <div class="card-body">
               <img class="img-fluid" src="static/img/Garden%20Expo%20logo%20stacked.jpg" alt="Garden Expo">
@@ -165,10 +154,22 @@
           <div class="card h-100">
             <div class="card-header text-center">Beekeeping Class</div>
             <div class="card-body">
-              <img class="img-fluid" src="static/img/Beekeeping2024.png" alt="Success at Beekeeping 2024 class flyer">
+              <img class="img-fluid" src="static/img/SuccessfulBeekeeping2025.png" alt="Success at Beekeeping 2025 class flyer">
             </div>
             <div class="card-footer text-center">
-              Stay tuned for when this class will be offered in 2025
+              <a class="learn-more" href="https://www.cwc.edu/tickets/" target="_blank" rel="noopener noreferrer">
+                Register</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <img class="img-fluid" src="static/img/IntroMarch2025.jpeg" alt="Introduction to Bees and Beekeeping">
+            </div>
+            <div class="card-footer text-center">
+              <a class="learn-more" href="https://www.eventbrite.com/o/central-wyoming-college-lander-17509004051" target="_blank" rel="noopener noreferrer">
+                Register</a>
             </div>
           </div>
         </div>
