Update hero text, small card headers

--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -129,26 +129,26 @@
           </div>
         </div>
       </div>
-      <div class="row row-cols-1 row-cols-md-3 g-3">
-        <div class="col-md-4">
+      <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="col-md-6 col-lg-4">
           <div class="card bl-card h-100">
             <div class="card-header text-center">Premium Creamed Raw Honey</div>
             <div class="card-body">
               <p class="card-text">
-                Our premium creamed raw honey is crafted from raw honey sourced directly
-                from trusted local beekeepers and enriched with fair-trade spices and
-                nutrient-rich freeze-dried fruits. Each batch is hand-crafted using a
+                Raw unfiltered honey is sourced directly from trusted local beekeepers
+                and enriched with fair-trade spices or nutrient-rich freeze-dried fruits.
+                Each batch is hand-crafted using a
                 proprietary week-long crystallization and blending process that yields
                 a velvety-smooth, spreadable product with distinctive flavors and all
-                the natural benefits of raw local honey.
+                the goodness of raw local honey.
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-6 col-lg-8">
           <div class="card tg-card h-100">
             <div class="card-body">
-              <img class="card-img-top" src="static/img/Product%20stack.jpg" alt="Product stack">
+              <img class="card-img-top" src="static/img/Display.jpg" alt="Product stack">
             </div>
             <div class="card-footer text-center">
               <a class="learn-more" href="products.html">Learn More</a>
@@ -167,7 +167,8 @@
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center">Crafted to taste good and do good by supporting local beekeepers, farmers and you</h2>
+        <h2 class="bolder text-center"><i>Crafted to taste good and do good by supporting
+            local beekeepers, farmers and you</i></h2>
       </div>
       <div class="row row-cols-2 g-3">
         <div class="col">
@@ -179,8 +180,9 @@
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center">Pure Wholesome Ingredients<br>
-          <i>Fair-trade spices<br>
+        <h2 class="bolder text-center">
+          <i>Raw unfiltered honey<br>
+            Fair-trade spices<br>
             Nutrient-rich freeze-dried fruits</i></h2>
       </div>
 
@@ -200,7 +202,7 @@
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center">Supporting Local Beekeepers & Small Farmers</h2>
+        <h2 class="bolder text-center"><i>Supporting Local Beekeepers & Small Farmers</i></h2>
       </div>
 
       <div class="row row-cols-2 g-3">
@@ -213,7 +215,7 @@
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center">Indulge in Nature's Finest Blends</h2>
+        <h2 class="bolder text-center"><i>Indulge in Nature's Finest Blends</i></h2>
       </div>
 
 
@@ -221,7 +223,7 @@
         <div class="col img-hover">
           <div class="card tg-card img-hover">
             <a href="products.html#TG" class="text-decoration-none">
-              <div class="card-header card-link text-center">Turmeric Ginger</div>
+              <div class="card-header-sm card-link text-center">Turmeric Ginger</div>
               <img class="card-img-top" src="static/img/TG.jpg" alt="Golden Milk">
             </a>
           </div>
@@ -229,7 +231,7 @@
         <div class="col">
           <a href="products.html#E" class="text-decoration-none">
             <div class="card e-card img-hover">
-              <div class="card-header card-link text-center">Elderberry</div>
+              <div class="card-header-sm card-link text-center">Elderberry</div>
               <img class="card-img-top" src="static/img/E.jpg" alt="Elderberry">
             </div>
           </a>
@@ -237,7 +239,7 @@
         <div class="col">
           <a href="products.html#G" class="text-decoration-none">
             <div class="card g-card img-hover">
-              <div class="card-header card-link text-center">Ginger</div>
+              <div class="card-header-sm card-link text-center">Ginger</div>
               <img class="card-img-top" src="static/img/G.jpg" alt="Ginger">
             </div>
           </a>
@@ -245,7 +247,7 @@
         <div class="col">
           <a href="products.html#PS" class="text-decoration-none">
             <div class="card ps-card img-hover">
-              <div class="card-header card-link text-center">Pumpkin Spice</div>
+              <div class="card-header-sm card-link text-center">Pumpkin Spice</div>
               <img class="card-img-top" src="static/img/PS.jpg" alt="Pumpkin Spice">
             </div>
           </a>
@@ -253,7 +255,7 @@
         <div class="col">
           <a href="products.html#BL" class="text-decoration-none">
             <div class="card b-card img-hover">
-              <div class="card-header card-link text-center">Blueberry Lemon</div>
+              <div class="card-header-sm card-link text-center">Blueberry Lemon</div>
               <img class="card-img-top" src="static/img/BL.jpg" alt="Blueberry Lemon">
             </div>
           </a>
@@ -261,7 +263,7 @@
         <div class="col">
           <a href="products.html#L" class="text-decoration-none">
             <div class="card l-card img-hover">
-              <div class="card-header card-link text-center">Lemon</div>
+              <div class="card-header-sm card-link text-center">Lemon</div>
               <img class="card-img-top" src="static/img/L.jpg" alt="Lemon">
             </div>
           </a>
