New social icons, event dates, remove unused scriptsabout.html

--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -168,6 +168,11 @@
                 </tr>
               </table>
             </div>
+            <div class="card-footer text-center">
+              <a class="learn-more" href="mailto:susan@queensofgoodness.com?
+                subject=I'm interested in becoming a vendor?
+                body=Can you contact me with information on how to become a vendor">Become a Vendor</a>
+            </div>
           </div>
         </div>
         <div class="col">
@@ -175,13 +180,11 @@
             <div class="card-header text-center">Order On-line</div>
             <div class="card-body text-center">
               <a href="https://eatwyoming.com" target="_blank" rel="noopener noreferrer">
-                <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=50%>
+                <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=30%>
               </a>
             </div>
             <div class="card-footer text-center">
-              <a class="learn-more" href="mailto:susan@queensofgoodness.com?
-                subject=I'm interested in becoming a vendor?
-                body=Can you contact me with information on how to become a vendor">Become a Vendor</a>
+              Only available to ship in Wyoming
             </div>
           </div>
         </div>
@@ -206,8 +209,8 @@
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
             </ul>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
             </div>
           </div>
         </div>
@@ -235,8 +238,8 @@
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
             </div>
           </div>
           <div class="col-md-6">
@@ -257,10 +260,6 @@
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
-    <script src="https://use.fontawesome.com/3142141c42.js"></script>
-    <script src="static/js/main.js" type="text/javascript"></script>
   </body>
 </html>
 
