--- a/queensofgoodness/events.html
+++ b/queensofgoodness/events.html
@@ -133,12 +133,15 @@
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
           <div class="card h-100">
-            <div class="card-header text-center">Garden Expo 2025</div>
+            <div class="card-header text-center">Garden Expo - April 26th</div>
             <div class="card-body">
               <img class="img-fluid" src="static/img/Garden%20Expo%20logo%20stacked.jpg" alt="Garden Expo">
+              <p class="card-title"><br>
+                 We'll be presenting a workshop at the Expo starting at 9:30am - Beekeeping 201: Honey Bee Health.</p>
+              <p class="card-title">
+                 Join us and other local beekeepers at an educational booth with beekeeping demonstrations and much more.</p>
+              <hr>
               <p class="card-title text-center">
-                <br>We'll be hosting workshops on how to keep honeybees healthy, demonstrations by local beekeepers, and much more</p>
-              <p class="text-center">
                 Saturday, April 26th 9 a.m. to 3 p.m.<br>
                 Lander Valley High School<br>
                 (350 Baldwin Creek Road)
@@ -152,7 +155,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <div class="card-header text-center">Beekeeping Class</div>
+            <div class="card-header text-center">Beekeeping Class - May 17th</div>
             <div class="card-body">
               <img class="img-fluid" src="static/img/SuccessfulBeekeeping2025.png" alt="Success at Beekeeping 2025 class flyer">
             </div>
@@ -167,10 +170,6 @@
             <div class="card-body">
               <img class="img-fluid" src="static/img/IntroMarch2025.jpeg" alt="Introduction to Bees and Beekeeping">
             </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="https://www.eventbrite.com/o/central-wyoming-college-lander-17509004051" target="_blank" rel="noopener noreferrer">
-                Register</a>
-            </div>
           </div>
         </div>
         <div class="col">
@@ -180,7 +179,7 @@
               <img class="img-fluid" src="static/img/HoneyBeeDay24.jpeg" alt="National Honey Bee Day posters and demonstrations">
             </div>
             <div class="card-footer text-center">
-              2024 was a great success, looking forward to August
+              2024 was a great success, next one in August
             </div>
           </div>
         </div>
@@ -206,8 +205,8 @@
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
             </ul>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
             </div>
           </div>
         </div>
@@ -235,8 +234,8 @@
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
             </div>
           </div>
           <div class="col-md-6">
@@ -257,10 +256,6 @@
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
-    <script src="https://use.fontawesome.com/3142141c42.js"></script>
-    <script src="static/js/main.js" type="text/javascript"></script>
   </body>
 </html>
 
