--- a/queensofgoodness/honey.html
+++ b/queensofgoodness/honey.html
@@ -138,7 +138,12 @@
             <div class="card-body">
               <h5 class="card-title text-center">Bees in your Neighborhood</h5>
               <p>
-                Honey is made by the bees for their own consumption using nectar and pollen from the flowers in the neighborhoods the foragers visited. This local honey has a unique color, taste, and aroma that is dependent on not only the flowers, but also the environmental conditions at that time.</p>
+                Honey is made by the bees for their own consumption using nectar and
+                pollen from the flowers in the neighborhoods the foragers visited.
+                This local honey has a unique color, taste, and aroma that is dependent
+                on the specific flowers visited by the foragers and environmental factors.
+                The honey a hive makes in May is different than in July and varies from
+                year to year.</p>
               <ul>
                 <li>
                   Raw honey is minimally processed to extract it from the honeycomb and coarsely strained to remove the larger wax chunks and bee parts. It still contains the pollen and other nutrients in the bee's own honey, giving it unique colors and flavors. Depending on a number of factors it will often crystallize in a just few months.
@@ -262,8 +267,8 @@
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
             </ul>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
             </div>
           </div>
         </div>
@@ -291,8 +296,8 @@
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
-              <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
             </div>
           </div>
           <div class="col-md-6">
@@ -313,8 +318,6 @@
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/3142141c42.js"></script>
-    <script src="static/js/main.js" type="text/javascript"></script>
   </body>
 </html>
 
