Contact info in footer

--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -274,9 +274,11 @@
         <div class="row row-cols-2 g-3">
           <div class="col-8">
             <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
-            <p class="text-center">Raw Local Honey</p>
-            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
-            <p class="text-center">Fair-trade and premium spices</p>
+            <div class="text-center">
+              <p><a class="footer-link" href="#">Contact Us</a></p>
+              <p>2881 Sinks Canyon Rd<br>
+                Lander, WY 82520</p>
+            </div>
           </div>
           <div class="col-4">
             <ul class="list-unstyled">
@@ -320,10 +322,10 @@
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
             </div>
           </div>
-          <div class="col-md-6">
-            <p class="text-center"><br>Raw Local Honey</p>
-            <p class="text-center">Nutrient-rich freeze-dried fruits</p>
-            <p class="text-center">Fair-trade and premium spices</p>
+          <div class="col-md-6 text-center">
+            <p><br><a class="footer-link" href="#">Contact Us</a></p>
+            <p>2881 Sinks Canyon Rd<br>
+              Lander, WY 82520</p>
           </div>
         </div>
       </div>
